@@ -14,14 +14,17 @@ import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.oauth2.client.userinfo.OAuth2UserService;
 import org.springframework.security.oauth2.client.web.AuthorizationRequestRepository;
 import org.springframework.security.oauth2.core.endpoint.OAuth2AuthorizationRequest;
+import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Collections;
 import java.util.List;
@@ -35,6 +38,7 @@ public class SecurityConfig {
     private final AuthorizationRequestRepository<OAuth2AuthorizationRequest> oAuth2AuthorizationRequestBasedOnCookieRepository;
 //    private final JwtTokenProvider jwtTokenProvider;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
+//    private final AuthenticationEntryPoint authenticationEntryPoint;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -45,26 +49,30 @@ public class SecurityConfig {
                         .anyRequest().authenticated() // JwtFilter 에서 authenticate 해줌
                 );
 
+//        http
+//                .formLogin(form -> form
+//                        .loginPage("/login")
+//                        .permitAll()
+//                );
         http
-                .formLogin(form -> form
-                        .loginPage("/login")
-                        .permitAll()
-                );
+                .formLogin(AbstractHttpConfigurer::disable)
+//                .httpBasic(AbstractHttpConfigurer::disable)
+                .csrf(AbstractHttpConfigurer::disable);
 
         http
                 .oauth2Login(oauth ->
                         oauth
                                 .authorizationEndpoint(authorizationEndpointConfig ->
                                         authorizationEndpointConfig
-                                                //Client 가 이 URI 로 요청을 보내면 OAuth 공급자에게 리다이렉션 됨
+                                                //Client 가 이 URI 로 요청을 보내면 OAuth 공급자에게 리디렉션 됨
                                                 .baseUri("/oauth2/authorization")
-                                                //request 가 자동으로 cookie 에 저장됨
+                                                //OAuth2 승인 요청이 자동으로 cookie 에 저장됨
                                                 .authorizationRequestRepository(oAuth2AuthorizationRequestBasedOnCookieRepository))
 
-                                //OAuth 공급자가 인증 후 OAuth 클라이언트(Spring Server)에게 리다이렉션할 URI 패턴 설정
-//                                .redirectionEndpoint(redirectionEndpointConfig ->
-//                                        redirectionEndpointConfig
-//                                                .baseUri("/*/oauth2/code/*"))
+                                //OAuth 공급자에게 인증을 받은 후 리다이렉트되는 엔드포인트 구성
+                                .redirectionEndpoint(redirectionEndpointConfig ->
+                                        redirectionEndpointConfig
+                                                .baseUri("/*/oauth2/code/*"))
 
                                 //인증 후 사용자 정보를 처리하는 서비스 설정
                                 .userInfoEndpoint(userInfoEndpoint ->
@@ -75,27 +83,48 @@ public class SecurityConfig {
                                 .successHandler(oAuth2SuccessHandler)
                 );
 
+        // 인증 실패할 경우
+//        http.exceptionHandling(handler -> handler.authenticationEntryPoint(authenticationEntryPoint));
+
         //UsernamePasswordFilter에서 클라이언트가 요청한 리소스의 접근 권한이 없을 때 막는 역할을 하기 때문에 이 필터 전에 jwtAuthenticationFilter실행
 //        http.addFilterBefore(new JwtAuthenticationFilter(jwtTokenProvider), UsernamePasswordAuthenticationFilter.class);
         http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         http
                 //localhost:5173 에 대한 CORS 허용
-                .cors(corsCustomizer -> corsCustomizer.configurationSource(new CorsConfigurationSource() {
-                    @Override
-                    public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-                        CorsConfiguration config = new CorsConfiguration();
-                        config.setAllowedOrigins(Collections.singletonList("http://localhost:5173"));
+                .cors(corsCustomizer -> corsCustomizer.configurationSource(request -> {
+                    CorsConfiguration config = new CorsConfiguration();
+                    config.setAllowedOrigins(Collections.singletonList("http://localhost:5173"));
 //                        config.setAllowedOrigins(Collections.singletonList("*"));
-//                        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-                        config.setAllowedMethods(Collections.singletonList("*"));
-                        config.setAllowCredentials(true);
-                        config.setAllowedHeaders(Collections.singletonList("*"));
-                        config.setMaxAge(3600L);
-                        return config;
-                    }
+                    config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+//                        config.setAllowedMethods(Collections.singletonList("*"));
+                    config.setAllowCredentials(true);
+                    config.setAllowedHeaders(Collections.singletonList("*"));
+                    config.setMaxAge(3600L);
+
+//                    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//                    source.registerCorsConfiguration("/**", config);
+//                    return source;
+                    return config;
                 }));
+
+//        http.cors(AbstractHttpConfigurer::disable);
 
         return http.build();
     }
+
+    // CORS 허용 적용
+//    @Bean
+//    public CorsConfigurationSource corsConfigurationSource() {
+//        CorsConfiguration configuration = new CorsConfiguration();
+//
+//        configuration.addAllowedOriginPattern("*");
+//        configuration.addAllowedHeader("*");
+//        configuration.addAllowedMethod("*");
+//        configuration.setAllowCredentials(true);
+//
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", configuration);
+//        return source;
+//    }
 }
